--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -15,7 +15,11 @@
     style="margin-bottom: -48px"
   >
     <div fxFlex="55%">
-      <img style="zoom: 175%; margin-bottom: 32px" [src]="current.image" />
+      <img
+        style="zoom: 175%; margin-bottom: 32px"
+        [src]="current.image"
+        [alt]="current.description"
+      />
     </div>
     <div fxFlex class="right no-margin">
       <p class="mat-display-3">
