--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="!current">no data</div>
-<div *ngIf="current">
+<div *ngIf="current$ | async as current; else loading">
   <div fxLayout="row">
     <div fxFlex="66%" class="mat-title no-margin">
       {{ current.city }}, {{ current.country }}
@@ -34,3 +33,4 @@
     </div>
   </div>
 </div>
+<ng-template #loading>Loading...</ng-template>
